# api-analytics

./: .env  .env.example  .env.test  .gitignore  README.md  compose.override.yml  compose.yml  docker-compose.yml
.github/workflows/: test-backend.yml
backend/: .env.example  .env.test  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0066a1e59091_initial_migration.py  259a7efb2429_init.py  642380e4b3c0_init.py  96f2b2497eaa_init.py
backend/app/: crud.py  dependencies.py  health.py  main.py  middleware.py  models.py  schemas.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: __init__.py  auth.py  health.py  metrics.py  track.py  users.py
backend/app/api/v1/routes/projects/: __init__.py  api_keys.py  metrics.py  projects.py
backend/app/core/: api_keys.py  config.py  db.py  exceptions.py  logging_config.py  rate_limiter.py  security.py  types.py
backend/app/crud/: auth.py  metrics.py  users.py
backend/app/models/: __init__.py  api_key.py  base.py  metric.py  project.py  user.py
backend/app/routers/: health.py
backend/app/schemas/: __init__.py  api_key.py  auth.py  metric.py  project.py  user.py
backend/app/services/: __init__.py  api_key_service.py  auth.py  auth_service.py  metric_service.py  project.py  project_service.py  user_service.py
backend/tests/: conftest.py  factories.py  test_api_keys.py  test_auth.py  test_metrics.py  test_metrics_edge_cases.py  test_projects.py  test_security.py  test_security_edge_cases.py  test_tracking.py
