[project]
name = "api-analytics-service"
version = "1.0.0"
description = "Backend for API Analytics"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.1",
    "fastapi[standard]>=0.128.0",
    "sqlalchemy>=2.0.45",
    "slowapi>=0.1.9",
    "redis>=5.0.0",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.10.1",
    "zxcvbn>=4.5.0",
    "types-zxcvbn>=4.5.0.20250809",
    "tenacity>=8.2.3",
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "greenlet>=3.1.1",
    "python-json-logger>=4.0.0",
    "colorlog>=6.10.1",
    "psycopg[binary]>=3.3.2",
]

[dependency-groups]
dev = [
    "pytest-env>=1.2.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.26.0",
    "testcontainers[postgres]>=4.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = ["--cov=app", "--cov-report=term-missing"]

[tool.pytest_env]
ENVIRONMENT = "test"
